<resources>
    <string name="app_name">Work Tracker</string>
    <string name="desc_logo">Logo app provisorio</string>


    //Strings de usuarios
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repetir contraseña</string>
    <string name="correo">Correo electronico</string>
    <string name="lgn_btn">Iniciar sesión</string>
    <string name="reg_btn">Registrate</string>
    <string name="error_msg"></string>
    <string name="login_error_1">Debes introducir tu usuario</string>
    <string name="login_error_2">Debes introducir tu contraseña</string>
    <string name="login_error_3">Usuario o contraseña incorrecta</string>

    <string name="error_pass_match">Las contraseñas no coinciden</string>
    <string name="error_pass_lenght">La contraseña debe tener más de 4 caracteres</string>
    <string name="error_campos_vacios">Debes rellenar todos los campos</string>
    <string name="error_email_exists">El correo electronico %1$s ya existe</string>
    <string name="error_username_exists">El nombre de usuario %1$s ya existe</string>

    <string name="usuario_agregado">Usuario registrado con exito</string>
    <string name="registro_cancelado">Se ha cancelado el registro</string>


    <string name="btnEdit">Editar</string>
    <string name="btnAnadir">Añadir</string>
    <string name="btnCancelar">Cancelar</string>

    <string name="btnGuardarCambios">Guardar cambios</string>


    //Strings relacionado a trabajos
    <string name="tituloCreaTrabajo">Crea un trabajo o proyecto</string>


    <string name="nombreProyecto">Nombre del trabajo o proyecto</string>
    <string name="descripcionProyecto">Descripcion del proyecto</string>
    <string name="objetivoTiempoSemanal">Objetivo de tiempo semanal</string>
    <string name="txtEdit">Editando tarea: %1$s</string>
    <string name="btnEliminarTrabajo">Eliminar trabajo</string>





    //Strings tareas

    <string name="btn_nueva_tarea">Agregar tarea</string>
    <string name="btn_eliminar_tarea">Eliminar Tareas</string>
    <string name="tTotal">Tiempo total: %1$s</string>
    <string name="ETFechaTrabajada">Fecha trabajada</string>
    <string name="ETTiempoTrabajado">Tiempo trabajado</string>
    <string name="txtCRTiempo">Tiempo trabajado en MINUTOS</string>


    //Strings crear registro
    <string name="tituloCreaRegistro">Crea un registro</string>

</resources>
