<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuarios.RegistroActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_btn"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/ETRUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        />
    <EditText
        android:id="@+id/ETRCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"/>

    <EditText
        android:id="@+id/ETRPass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/ETRPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/TVError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onRegistro"
        android:text="@string/reg_btn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCancelar"
        android:text="@string/btnCancelar" />

</LinearLayout>