<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registros.EditRegistroActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloCreaRegistro"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ETFechaTrabajada"
        android:textAlignment="center"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/ETFechaTrabajada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ETFechaTrabajada"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        />

    <TextView
        android:id="@+id/txtCRTiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCRTiempo" />

    <EditText
        android:id="@+id/ETTiempoTrabajado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtCRTiempo"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCRAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onGuardar"
        android:text="@string/btnGuardarCambios" />

    <Button
        android:id="@+id/btnCancelarCR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCancelar"
        android:text="@string/btnCancelar" />


</LinearLayout>