<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trabajos.EditTrabajo"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tituloEditTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreProyecto"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ETETNombreTrabajo"
        android:hint="@string/nombreProyecto"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcionProyecto"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ETETDescProyecto"
        android:hint="@string/descripcionProyecto"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BTNEliminarTrabajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:text="@string/btnEliminarTrabajo"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:onClick="onEliminar"
            />

        <Button
            android:id="@+id/BTNGuardarCambios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardarCambios"

            android:onClick="onGuardar"

            android:layout_weight="1"
            android:backgroundTint="#3F51B5"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BTNCancelar"
        android:text="@string/btnCancelar"
        android:onClick="onCancelarEdit"
        />


</LinearLayout>